# hallow

./: .eslintrc.js  .gitignore  .lintstagedrc.js  .prettierignore  .prettierrc.js  .yarnrc.yml  CLAUDE.md  PLAN.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
.github/workflows/: ci.yml  release.yml
deprecated/: package.json  tsconfig.json
deprecated/example/: package.json
deprecated/example/src/: index.tsx  setupProxy.js
deprecated/example/src/api/: greeting.ts  utils.ts
deprecated/example/src/views/: App.test.tsx
example/: package.json  tsconfig.json
example/src/: App.tsx
example/src/api/: core.ts  greeting-stub.ts  greeting.ts  hooks.ts  internal_exception_messages.ts  resource.ts  utils.ts
example/src/proto/: Greeting.ts  internal_exception_messages.proto
example/src/protos/: greeting_grpc_pb.d.ts  greeting_grpc_pb.js  greeting_grpc_pb_service.d.ts  greeting_grpc_pb_service.js
example/src/views/: App.tsx  ErrorBoundary.tsx  GrpcErrorBoundary.tsx
grpc-protobuf-plugin/: Cargo.toml  package.json
grpc-protobuf-plugin/src/: lib.rs
src/: index.ts
src/parser/: StubGenerator.ts  index.ts
src/types/: index.ts
test/: parser.test.ts  sample.proto
